--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_picker: ^0.8.9
   permission_handler: ^12.0.1
   share_plus: ^12.0.1
+  barcode_widget: ^2.0.4
+  mobile_scanner: ^5.2.3
   # fl_chart removed because the installed Flutter SDK is incompatible with
   # recent fl_chart versions (they use newer MediaQuery APIs). A small
   # in-app CustomPainter bar chart is used instead in the sales page.
